--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <li><a href="./Basic_Web_Page/index.html" target="_blank">Basic Web Page</a></li>
         <li><a href="./Layout_Exercise/index.html" target="_blank">Layout Exercise</a></li>
         <li><a href="./Form_Creation/index.html" target="_blank">Form Creation</a></li>
-        <li><a href="./Interactive_Element/index.html" target="_blank">Layout Exercise</a></li>
-        <li><a href="./Simple_Calculator/index.html" target="_blank">Form Creation</a></li>
+        <li><a href="./Interactive_Element/index.html" target="_blank">Interactive Element</a></li>
+        <li><a href="./Simple_Calculator/index.html" target="_blank">Simple Calculator</a></li>
     </ol>
 </body>
 </html>
