--- a/Basic_Web_Page/index.html
+++ b/Basic_Web_Page/index.html
@@ -11,9 +11,9 @@
     <h2>STUDENT</h2>
     <br />
     <h3>Career Objective</h3>
-    <p>Seeking for a challenging position in an progressive
+    <p>Seeking a challenging position in a progressive
         organization to utilise my skills and abilities while making
-        significant contribution to the success of my company.</p>
+        significant contribution to the success of the company.</p>
     <section>
     <h3>Get in touch!</h3>
     <hr/>
