--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebDevTasks</title>
     <style>
         a{
             text-decoration: none;
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>HTML/CSS Tasks</h1>
+    <h1>WebDevTasks</h1>
     <ol type="1">
         <li><a href="./Basic_Web_Page/index.html" target="_blank">Basic Web Page</a></li>
         <li><a href="./Layout_Exercise/index.html" target="_blank">Layout Exercise</a></li>
