--- a/index.html
+++ b/index.html
@@ -5,23 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebDevTasks</title>
     <style>
-        a{
-            text-decoration: none;
-        }
-        ol{
-            font-size: 20px;
-        }
+
+body, h1, ol, li {
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    color: #000000;
+    line-height: 1.6;
+    padding: 20px;
+  }
+  
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  ol {
+    list-style-type: decimal;
+    margin-left: 20px;
+  }
+  
+  li {
+    margin-bottom: 10px;
+  }
+  
+  a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px;
+  }
+
 
     </style>
 </head>
 <body>
     <h1>WebDevTasks</h1>
     <ol type="1">
-        <li><a href="./Basic_Web_Page/index.html" target="_blank">Basic Web Page</a></li>
-        <li><a href="./Layout_Exercise/index.html" target="_blank">Layout Exercise</a></li>
-        <li><a href="./Form_Creation/index.html" target="_blank">Form Creation</a></li>
-        <li><a href="./Interactive_Element/index.html" target="_blank">Interactive Element</a></li>
-        <li><a href="./Simple_Calculator/index.html" target="_blank">Simple Calculator</a></li>
+        <li><a href="./Basic_Web_Page/index.html" >Basic Web Page</a></li>
+        <li><a href="./Layout_Exercise/index.html">Layout Exercise</a></li>
+        <li><a href="./Form_Creation/index.html" >Form Creation</a></li>
+        <li><a href="./Interactive_Element/index.html" >Interactive Element</a></li>
+        <li><a href="./Simple_Calculator/index.html" >Simple Calculator</a></li>
+        <li><a href="./ToDoList/index.html" >To Do List</a></li>
     </ol>
 </body>
 </html>
