Responsive_page task completed

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ body, h1, ol, li {
         <li><a href="./Interactive_Element/index.html" >Interactive Element</a></li>
         <li><a href="./Simple_Calculator/index.html" >Simple Calculator</a></li>
         <li><a href="./ToDoList/index.html" >To Do List</a></li>
+        <li><a href="./Responsive_Page/index.html" >Responsive Page</a></li>
     </ol>
 </body>
 </html>
