--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ body, h1, ol, li {
         <li><a href="./Simple_Calculator/index.html" >Simple Calculator</a></li>
         <li><a href="./ToDoList/index.html" >To Do List</a></li>
         <li><a href="./Responsive_Page/index.html" >Responsive Page</a></li>
+        <li><a href="./Modal_Window/index.html" >Modal Window</a></li>
     </ol>
 </body>
 </html>
